# file_signature_generator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: file_manager_impl.h  fs_gen_multithread_impl.h  fs_gen_single_thread_impl.h  fs_generator.h  resource_manager_impl.h
include/interfaces/: data_resource_manager.h  file_manager.h  fs_gen_impl.h  hash_resource_manager.h  resource_manager.h
src/: file_manager_impl.cpp  fs_gen_multithread_impl.cpp  fs_gen_single_thread_impl.cpp  fs_generator.cpp  main.cpp  resource_manager_impl.cpp
utils/include/: common.h  console_printer.h  constants.h  file_printer.h  hash_generator.h  log.h  result_printer.h  scope_timer.h  settings.h  types.h
utils/include/interfaces/: log_printer.h
utils/src/: common.cpp  console_printer.cpp  file_printer.cpp  hash_generator.cpp  log.cpp  result_printer.cpp  scope_timer.cpp  settings.cpp
